@@ -1,3 +1,13 @@
+2007-05-04  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* core.lisp (add-window): call screen-add-mapped-window
+	(restore-window): likewise
+	(withdraw-window): call screen-remove-mapped-window
+	(netwm-update-client-list): new function
+	(screen-add-mapped-window): likewise
+	(screen-remove-mapped-window): likewise
+	(net-set-properties): set the _NET_CLIENT_LIST property
+
 2007-05-03  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* make-image.lisp: return error code 0 for sbcl
